Added the basics of TCP/IP Socket Client

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,9 +8,9 @@ CXX = g++
 CXXFLAGS = -Wall
 LFLAGS = -Wall
 
-OBJS = main.o Cli.o
+OBJS = main.o Cli.o Client.o
 
-LIBS = -lboost_thread
+LIBS = -lboost_thread -lboost_system
 
 PROJECT_NAME = ece454_project1
 
@@ -24,11 +24,14 @@ $(EXEC) : $(OUT_OBJS)
 #$(OUT_DIR)/%.o: %.cpp
 #	$(CXX) $(CXXFLAGS) $(DEBUG) -c -o $@ $<
 
-$(OUT_DIR)/main.o: main.cpp CliCmdHandler.h
+$(OUT_DIR)/main.o: main.cpp CliCmdHandler.h Client.h
 	$(CXX) $(CXXFLAGS) $(DEBUG) -c -o $(OUT_DIR)/main.o main.cpp
 
 $(OUT_DIR)/Cli.o: Cli.h Cli.cpp CliCmdHandler.h
 	$(CXX) $(CXXFLAGS) $(DEBUG) -c -o $(OUT_DIR)/Cli.o Cli.cpp
+
+$(OUT_DIR)/Cli.o: Client.h
+	$(CXX) $(CXXFLAGS) $(DEBUG) -c -o $(OUT_DIR)/Client.o Client.cpp
 
 
 .PHONY : clean debug
