--- a/src/Makefile
+++ b/src/Makefile
@@ -4,13 +4,28 @@
 # Robin Vierich
 #
 
+PLATFORM = LINUX
+
+ifdef SystemRoot # This is only defined on windows
+   PLATFORM = WIN
+endif
+
 CXX = g++
 CXXFLAGS = -Wall
 LFLAGS = -Wall
 
-OBJS = main.o Cli.o Client.o
+OBJS = main.o Cli.o Client.o Server.o
 
+INCLUDEPATH = ""
+LIBPATH = ""
 LIBS = -lboost_thread -lboost_system
+
+ifeq ($(PLATFORM), WIN)
+	INCLUDES = -I"C:\boost\boost_1_49_0"
+	LIBPATH = -L"C:\boost\boost_1_49_0\stage\lib"
+    WINLIBEXTENSION = -mgw46-mt-d-1_49 # minGW linker - built with MultiThreading - debug enabled - v1.49
+    LIBS = -lboost_thread$(WINLIBEXTENSION) -lboost_system$(WINLIBEXTENSION) -lws2_32 # need to link with winsock32 as well
+endif
 
 PROJECT_NAME = ece454_project1
 
@@ -18,20 +33,24 @@ OUT_DIR = ../build
 OUT_OBJS = $(addprefix $(OUT_DIR)/,$(OBJS))
 EXEC = $(addprefix $(OUT_DIR)/,$(PROJECT_NAME))
 
+
 $(EXEC) : $(OUT_OBJS)
-	$(CXX) -o $@ $(LFLAGS) $(LIBS) $^
+	$(CXX) -o $@ $(LFLAGS) $^ $(LIBPATH) $(LIBS)
 
 #$(OUT_DIR)/%.o: %.cpp
 #	$(CXX) $(CXXFLAGS) $(DEBUG) -c -o $@ $<
 
 $(OUT_DIR)/main.o: main.cpp CliCmdHandler.h Client.h
-	$(CXX) $(CXXFLAGS) $(DEBUG) -c -o $(OUT_DIR)/main.o main.cpp
+	$(CXX) $(CXXFLAGS) $(DEBUG) $(INCLUDES) -c -o $(OUT_DIR)/main.o main.cpp
 
 $(OUT_DIR)/Cli.o: Cli.h Cli.cpp CliCmdHandler.h
-	$(CXX) $(CXXFLAGS) $(DEBUG) -c -o $(OUT_DIR)/Cli.o Cli.cpp
+	$(CXX) $(CXXFLAGS) $(DEBUG) $(INCLUDES) -c -o $(OUT_DIR)/Cli.o Cli.cpp
 
-$(OUT_DIR)/Cli.o: Client.h
-	$(CXX) $(CXXFLAGS) $(DEBUG) -c -o $(OUT_DIR)/Client.o Client.cpp
+$(OUT_DIR)/Client.o: Client.h
+	$(CXX) $(CXXFLAGS) $(DEBUG) $(INCLUDES) -c -o $(OUT_DIR)/Client.o Client.cpp
+
+$(OUT_DIR)/Server.o: Server.h Server.cpp
+	$(CXX) $(CXXFLAGS) $(DEBUG) $(INCLUDES) -c -o $(OUT_DIR)/Server.o Server.cpp
 
 
 .PHONY : clean debug
