Modified peer.h to make it compile Added some implementation for peers Updated Makefile Other small changes

--- a/src/Makefile
+++ b/src/Makefile
@@ -15,21 +15,7 @@ CXXFLAGS = -Wall
 LFLAGS = -Wall
 
 LIBS = -lboost_system
-OBJS = main.o Cli.o Client.o Server.o
-
-ifeq ($(PLATFORM), WIN)
-	INCLUDES = -I"C:\boost\boost_1_49_0"
-	LIBPATH = -L"C:\boost\boost_1_49_0\stage\lib"
-	WINLIBEXTENSION = -mgw46-mt-d-1_49 # minGW linker - built with MultiThreading - debug enabled - v1.49
-	LIBS = -lboost_thread$(WINLIBEXTENSION) -lboost_system$(WINLIBEXTENSION) -lws2_32 # need to link with winsock32 as well
-else
-ifneq (,$(findstring x86_64,$(shell uname -a)))
-	LIBS += -lboost_thread-mt
-else
-	LIBS += -lboost_thread
-endif
-endif
-
+OBJS = main.o Cli.o Client.o Server.o peer.o
 
 PROJECT_NAME = ece454_project1
 
@@ -37,15 +23,30 @@ OUT_DIR = ../build
 OUT_OBJS = $(addprefix $(OUT_DIR)/,$(OBJS))
 EXEC = $(addprefix $(OUT_DIR)/,$(PROJECT_NAME))
 
+# Platform-specific variables
+ifeq ($(PLATFORM), WIN)					# WINDOWS
+	INCLUDES = -I"C:\boost\boost_1_49_0"
+	LIBPATH = -L"C:\boost\boost_1_49_0\stage\lib"
+	WINLIBEXTENSION = -mgw46-mt-d-1_49 # minGW linker - built with MultiThreading - debug enabled - v1.49
+	LIBS = -lboost_thread$(WINLIBEXTENSION) -lboost_system$(WINLIBEXTENSION) -lws2_32 # need to link with winsock32 as well
+else							# LINUX
+ifneq (,$(findstring x86_64,$(shell uname -a)))		# 64bit
+	LIBS += -lboost_thread-mt -lboost_filesystem-mt
+else							# 32bit
+	LIBS += -lboost_thread -lboost_filesystem
+endif
+endif
+
 # Lining the object files
 $(EXEC) : $(OUT_OBJS)
 	$(CXX) -o $@ $(LFLAGS) $^ $(LIBPATH) $(LIBS)
 
 # Compiling
-$(OUT_DIR)/main.o: main.cpp CliCmdHandler.h Client.h
+# This is all very manual and tedious... If have time, implement auto prereqs.
+$(OUT_DIR)/main.o: main.cpp Client.h Server.h Cli.h peer.h
 	$(CXX) $(CXXFLAGS) $(DEBUG) $(INCLUDES) -c -o $(OUT_DIR)/main.o main.cpp
 
-$(OUT_DIR)/Cli.o: Cli.h Cli.cpp CliCmdHandler.h
+$(OUT_DIR)/Cli.o: Cli.h Cli.cpp
 	$(CXX) $(CXXFLAGS) $(DEBUG) $(INCLUDES) -c -o $(OUT_DIR)/Cli.o Cli.cpp
 
 $(OUT_DIR)/Client.o: Client.h Client.cpp
@@ -53,6 +54,9 @@ $(OUT_DIR)/Client.o: Client.h Client.cpp
 
 $(OUT_DIR)/Server.o: Server.h Server.cpp
 	$(CXX) $(CXXFLAGS) $(DEBUG) $(INCLUDES) -c -o $(OUT_DIR)/Server.o Server.cpp
+
+$(OUT_DIR)/peer.o: peer.h peer.cpp
+	$(CXX) $(CXXFLAGS) $(DEBUG) $(INCLUDES) -c -o $(OUT_DIR)/peer.o peer.cpp
 
 # clean and debug targets
 .PHONY : clean debug
